--- a/index.html
+++ b/index.html
@@ -139,17 +139,28 @@
 </div>
 </div>
     </div>
+   <div class="row">
 <div class="baa">
-<!-- $$$$$$$ -->
-</div>
 
+<div class="mnb">
+<!-- $$$$$$$ -->
+
+
+</div>
+</div>
+</div>
+    </div>
+<div class="row">
 <div class="taha">
+
     <h3 id="lkkk">
       Thank you for being with me so far<br>
 
       Contact me to submit a project<br><br>
       <i class="fa fa-instagram" id="insta"  >mansourkingm</i>
     </h3>
+</div>
+</div>
 </div>
 </body>
 </html>
